# Edu-Global

./: .env.example  .env.local  .gitignore  CLEANUP_COMPLETE.md  FUNCTIONALITY_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  hackathon-desc.md  main.py  pyproject.toml  universities.json
backend/: auth.py  config.py  database.py  main.py  migrate_database.py  models.py  requirements.txt  schemas.py  test_connection.py
backend/data/: universities.json
backend/migrations/: fix_gpa_column.sql  schema.sql
backend/routes/: ai_counsellor.py  onboarding.py  todos.py  universities.py  users.py
backend/services/: ai_counsellor_service.py  university_service.py
frontend/: package.json  proxy.ts
frontend/app/: globals.css  layout.js  page.js
frontend/app/(auth)/sign-in/[[...sign-in]]/: page.js
frontend/app/(auth)/sign-up/[[...sign-up]]/: page.js
frontend/app/application/: page.js
frontend/app/components/: Navbar.js  OnboardingRequiredModal.js  UniversityCard.js
frontend/app/counsellor/: page.js
frontend/app/dashboard/: page.js  page_old.js
frontend/app/hooks/: useOnboardingProtection.js
frontend/app/onboarding/: page.js
frontend/app/onboarding/components/: FormComponents.js  OnboardingForm.js  ProgressBar.js
frontend/app/onboarding/components/steps/: StepFour.js  StepOne.js  StepThree.js  StepTwo.js
frontend/app/profile/: page.js
frontend/app/shortlist/: page.js
frontend/app/universities/: page.js
scripts/: verify_ai_actions.py
